[tool.autopep8]
max_line_length = 120

[tool.poetry]
name = "kubeconfig-next"
description = "A fork of kubeconfig, a simple wrapper around Kubernetes kubectl"
authors = ["Dan Bryant <daniel.bryant@linux.com>"]
license = "BSD"
documentation = "http://kubeconfig-python.readthedocs.io"
version = "1.1.3"
readme = "README.rst"
include = [{ path = "tests", format = "sdist" }]
packages = [{include = "kubeconfig"}]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^31.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
mock = "^5.1.0"
pytest-cov = "^5.0.0"
pytest-runner = "^6.0.1"
pyflakes = "^3.2.0"
pylint = "^3.3.0"
pycodestyle = "^2.12.1"
pydocstyle = "^6.3.0"

[tool.poetry.group.doc.dependencies]
sphinx = "7.4.7"
sphinx-rtd-theme = "^2.0.0"

[tool.pycodestyle]
exclude = "docs,.eggs"
max-line-length = 100

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
